@@ -1,3 +1,10 @@
+2003-01-29  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (tkchat::babelfishInit): Fixed the translation code
+	for the new babelfish URLs.
+	* tkchat.tcl (::tkchat::userPost): Fixed bug preventing the
+	/userinfo command from being recognised when manually entered.
+
 2003-01-17  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl: change \w+ to [^ ]+ in ircbridge nick detection
